k8s/20-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financeapp-frontend
  namespace: financeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financeapp-frontend
  template:
    metadata:
      labels:
        app: financeapp-frontend
    spec:
      containers:
        - name: frontend
          image: financeapp-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
