k8s/11-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financeapp-api
  namespace: financeapp
spec:
  selector:
    app: financeapp-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
