k8s/21-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financeapp-frontend
  namespace: financeapp
spec:
  selector:
    app: financeapp-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
